August_30/August_30/src/objects/Recruiting_Requisition__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>General, Employee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recruiting Requisitions</relationshipLabel>
        <relationshipName>Recruiting_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Candidate_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date_Aging__c</fullName>
        <formula>TODAY() -  Expected_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Start Date Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Stage__c</fullName>
        <label>Hiring Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sourcing</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Joined</fullName>
                </value>
                <value>
                    <fullName>Req Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Candidate_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offshore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offshore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onshore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Candidate_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Role__r.Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Recruiting Requisitions</relationshipLabel>
        <relationshipName>Recruiting_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>TEXT(Role__r.Role_on_Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Role__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Practice Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Recruiting Requisitions</relationshipLabel>
        <relationshipName>Recruiting_Requisitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TEK_HR_Req_ID__c</fullName>
        <label>TEK HR Req ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Recruiting Requisition</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Req ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruiting Requisitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Accepted_Joined_Candidates</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Expected_Start_Date__c</columns>
        <columns>Hiring_Stage__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hiring_Stage__c</field>
            <operation>equals</operation>
            <value>Accepted,Joined</value>
        </filters>
        <label>Accepted/Joined Candidates</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hiring_Stage__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Expected_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>